--- a/main.html
+++ b/main.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="track your grades" /> 
+    <title> Progress Tracker </title>
+    <link rel="stylesheet" href="styles.css" /> 
+  </head>
+  <body>
+    <h1>Progress Tracker</h1>
+    <nav>
+    <ul>
+        <li><a href="account">ACCOUNT</a></li>
+        <li><a href="timer">TIMER</a></li>
+        <li><a href="assignments">ASSIGNMENTS</a></li>
+    </ul>
+    </nav>
+  </body>
 
+</html>
